installdir = $(pkgdatadir)/countries

dist_install_DATA = \
	ad.png \
	ae.png \
	bg.png \
	cz.png \
	de.png \
	dk.png \
	en.png \
	es.png \
	ee.png \
	fi.png \
	fr.png \
	gr.png \
	hr.png \
	hu.png \
	il.png \
	ir.png \
	is.png \
	it.png \
	lt.png \
	lv.png \
	missing.png \
	nl.png \
	no.png \
	pl.png \
	pt.png \
	ro.png \
	ru.png \
	se.png \
	si.png \
	sk.png \
	th.png \
	tr.png \
	ua.png \
	x-fy.png \
	yu.png
