installdir = $(pkgdatadir)/skin_default/countries

dist_install_DATA = \
	ar_AE.png \
	bg_BG.png \
	ca_AD.png \
	cs_CZ.png \
	da_DK.png \
	de_DE.png \
	el_GR.png \
	en_GB.png \
	en_US.png \
	es_ES.png \
	et_EE.png \
	fa_IR.png \
	fi_FI.png \
	fr_FR.png \
	fy_NL.png \
	he_IL.png \
	hr_HR.png \
	hu_HU.png \
	id_ID.png \
	is_IS.png \
	it_IT.png \
	lt_LT.png \
	lv_LV.png \
	missing.png \
	nb_NO.png \
	nl_NL.png \
	no_NO.png \
	pl_PL.png \
	pt_BR.png \
	pt_PT.png \
	ro_RO.png \
	ru_RU.png \
	sk_SK.png \
	sl_SI.png \
	sr_YU.png \
	sv_SE.png \
	th_TH.png \
	tr_TR.png \
	uk_UA.png
