SUBDIRS = Default_with_Analogue_Clock_Standby Default_with_Picon_and_Analogue_Clock_Standby Default_with_Picon_Fullscreen Default_with_Picon_Fullscreen_and_Analogue_Clock_Standby

installdir = $(pkgdatadir)/display/skin_default
dist_install_DATA = *.png *.ttf

datainstalldir = $(pkgdatadir)/display
dist_datainstall_DATA = *.xml piconprev.png prev.png
