installdir = $(pkgdatadir)/lcd

dist_install_DATA = \
	update_unstable.png \
	update_stable.png \
	txt.png \
	tuner-d.png \
	tuner-d-act.png \
	tuner-c.png \
	tuner-c-act.png \
	tuner-b.png \
	tuner-b-act.png \
	tuner-a.png \
	tuner-a-act.png \
	rec.png \
	hd.png \
	format.png \
	dolby.png \
	crypt.png \
	stop.png \
	slow.png \
	play.png \
	pause.png \
	forward.png \
	backward.png