if AZBOX
SUBDIRS = azboxme azboxhd azboxelite
endif

if DREAMBOX
SUBDIRS = dmm0 dmm1 dmm2
endif

if E3HD
SUBDIRS = e3hd
endif

if EBOX
SUBDIRS = ebox5000
endif

if XTREND
SUBDIRS = et4x00 et6x00 et6500 et9x00 et9500
endif

if GIGABLUE
SUBDIRS = gb
endif

if GBQUAD
SUBDIRS = gb
endif

if IQON
SUBDIRS = iqon
endif

if JEPSSEN
SUBDIRS = mediabox
endif

if EDISION
SUBDIRS = optimuss
endif

if IXUSSONE
SUBDIRS = ixussone
endif

if IXUSSZERO
SUBDIRS = ixusszero
endif

if IXUSSDUO
SUBDIRS = ixusszero
endif

if ODIN
SUBDIRS = odinm9 odinm7 odinm6
endif

if TECHNOMATE
SUBDIRS = tm
endif

if VENTON
SUBDIRS = ini0 ini1 ini2 ini3 ini4
endif

if INI
SUBDIRS = ini0 ini1 ini2 ini3 ini4
endif

if VUSOLO
SUBDIRS = vu
endif

if VUSOLO2
SUBDIRS = vu
endif

if VUUNO
SUBDIRS = vu
endif

if VUDUO
SUBDIRS = vu
endif

if VUULTIMO
SUBDIRS = vu2
endif

if VUDUO2
SUBDIRS = vu
endif

if XP1000
SUBDIRS = xp1000
endif

