installdir = $(pkgdatadir)/rc_models

dist_install_DATA = \
	rc_models.cfg \
	dmmadv.png  et4x00.png  et8000.png  et9x00.png  vu.png        xp1000.png \
	dmm.png     et6x00.png  et9500.png  vuduo2.png  vuultimo.png  formuler1.png \
	dmmadv.xml  et4x00.xml  et8000.xml  et9x00.xml  vuultimo.xml  xp1000.xml \
	dmm.xml     et6x00.xml  et9500.xml  vuduo2.xml  vu.xml        formuler1.xml
