SUBDIRS = menu icons buttons spinner

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	arrowdown.png \
	arrowup.png \
	bar_ber.png \
	bar_snr.png \
	b_bl.png \
	b_b.png \
	b_br.png \
	b_l.png \
	border_epg.png \
	border_eventinfo.png \
	border_info.png \
	border_menu_300.png \
	border_menu_350.png \
	border_menu.png \
	border_multiepg.png \
	bottombar.png \
	b_r.png \
	b_tl.png \
	b_t.png \
	b_tr.png \
	celserviceeventprogressbar.png \
	div-h.png \
	div-v.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	expandable-plugins.png \
	expanded-plugins.png \
	info-bg_mp.png \
	info-bg.png \
	mediaplayer_bg.png \
	mute.png \
	nim_active.png \
	no_coverArt.png \
	pal.png \
	picon_default.png \
	position_arrow.png \
	position_pointer.png \
	progress_bg.png \
	progress_big.png \
	progress_medium.png \
	progress_small.png \
	rcold.png \
	rc.png \
	screws_mp.png \
	screws.png \
	sleeptimer.png \
	timeline-now.png \
	timeline.png \
	unhandled-key.png \
	verticalline-plugins.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	vkey_text.png \
	volume.png \
	wizard.png
