SUBDIRS = menu icons buttons

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = *.png

if GB800SE
SUBDIRS += spinner16
endif

if GB800SOLO
SUBDIRS += spinner16
endif

if GB800UE
SUBDIRS += spinner16
endif

if GBQUAD
SUBDIRS += spinner32
endif

if GBQUADPLUS
SUBDIRS += spinner32
endif

if GB800SEPLUS
SUBDIRS += spinner32
endif

if GB800UEPLUS
SUBDIRS += spinner32
endif
