installdir = $(pkgdatadir)/display/skin_default
dist_install_DATA = update.png txt.png tuner-d.png tuner-d-act.png tuner-c.png tuner-c-act.png tuner-b.png tuner-b-act.png tuner-a.png tuner-a-act.png stop.png slow.png rec.png play.png pause.png hd.png forward.png format.png dolby.png crypt.png backward.png 

datainstalldir = $(pkgdatadir)/display
dist_datainstall_DATA = *.xml prev.png piconprev.png
