AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h \
	-include $(top_builddir)/enigma2_config.h

noinst_LTLIBRARIES = libenigma_base.la

libenigma_base_la_SOURCES = \
	buffer.cpp \
	buffer.h \
	connection.cpp \
	console.cpp \
	console.h \
	ebase.cpp \
	ebase.h \
	eerror.cpp \
	eerror.h \
	elock.cpp \
	elock.h \
	encoding.cpp \
	encoding.h \
	eptrlist.h \
	estring.cpp \
	estring.h \
	etpm.cpp \
	etpm.h \
	filepush.cpp \
	filepush.h \
	i18n.h \
	init.cpp \
	init.h \
	init_num.h \
	ioprio.cpp \
	ioprio.h \
	message.cpp \
	message.h \
	nconfig.cpp \
	nconfig.h \
	object.h \
	rawfile.cpp \
	rawfile.h \
	ringbuffer.h \
	smartptr.cpp \
	smartptr.h \
	thread.cpp \
	thread.h
