AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h

noinst_LTLIBRARIES = libenigma_base.la

libenigma_base_la_SOURCES = \
	buffer.cpp ebase.cpp eerror.cpp elock.cpp \
	init.cpp message.cpp thread.cpp \
	smartptr.cpp estring.cpp connection.cpp \
	filepush.cpp encoding.cpp console.cpp rawfile.cpp \
	nconfig.cpp ioprio.cpp etpm.cpp \
	freesatv2.cpp
