AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h \
	-include $(top_builddir)/enigma2_config.h

noinst_LTLIBRARIES = libenigma_driver.la

libenigma_driver_la_SOURCES = \
	avswitch.cpp \
	avswitch.h \
	etimezone.cpp \
	etimezone.h \
	input_fake.h \
	misc_options.cpp \
	misc_options.h \
	rc.cpp \
	rc.h \
	rcconsole.cpp \
	rcconsole.h \
	rcdbox.h \
	rcdreambox2.h \
	rcinput.cpp \
	rcinput.h \
	rfmod.cpp \
	rfmod.h
