AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h

noinst_LTLIBRARIES = libenigma_dvb_ci.la

libenigma_dvb_ci_la_SOURCES = dvbci.cpp dvbci_session.cpp dvbci_resmgr.cpp \
														 dvbci_appmgr.cpp dvbci_camgr.cpp \
														 dvbci_datetimemgr.cpp dvbci_mmi.cpp \
														 dvbci_ui.cpp

