AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h \
	-include $(top_builddir)/enigma2_config.h

noinst_LIBRARIES = libenigma_gui.a

libenigma_gui_a_SOURCES = \
	ebutton.cpp \
	ebutton.h \
	ecanvas.cpp \
	ecanvas.h \
	einput.cpp \
	einput.h \
	einputnumber.cpp \
	einputnumber.h \
	einputstring.cpp \
	einputstring.h \
	elabel.cpp \
	elabel.h \
	elistbox.cpp \
	elistbox.h \
	elistboxcontent.cpp \
	elistboxcontent.h \
	epixmap.cpp \
	epixmap.h \
	epositiongauge.cpp \
	epositiongauge.h \
	eslider.cpp \
	eslider.h \
	esubtitle.cpp \
	esubtitle.h \
	evideo.cpp \
	evideo.h \
	ewidget.cpp \
	ewidget.h \
	ewidgetanimation.cpp \
	ewidgetanimation.h \
	ewidgetdesktop.cpp \
	ewidgetdesktop.h \
	ewindow.cpp \
	ewindow.h \
	ewindowstyle.cpp \
	ewindowstyle.h \
	ewindowstyleskinned.cpp \
	ewindowstyleskinned.h
