AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h

noinst_LTLIBRARIES = libenigma_gui.la

libenigma_gui_la_SOURCES = \
	ebutton.cpp elabel.cpp eslider.cpp ewidget.cpp ewidgetdesktop.cpp  \
	ewindow.cpp ewindowstyle.cpp elistbox.cpp elistboxcontent.cpp \
	epixmap.cpp ewindowstyleskinned.cpp einput.cpp einputstring.cpp einputnumber.cpp \
	ewidgetanimation.cpp epositiongauge.cpp evideo.cpp esubtitle.cpp ecanvas.cpp
