AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/include \
	-include Python.h \
	-include $(top_builddir)/enigma2_config.h

noinst_LIBRARIES = libenigma_gui.a

libenigma_gui_a_SOURCES = \
	ebutton.cpp \
	ecanvas.cpp \
	einput.cpp \
	einputnumber.cpp \
	einputstring.cpp \
	elabel.cpp \
	elistbox.cpp \
	elistboxcontent.cpp \
	epixmap.cpp \
	epositiongauge.cpp \
	eslider.cpp \
	esubtitle.cpp \
	evideo.cpp \
	ewidget.cpp \
	ewidgetanimation.cpp \
	ewidgetdesktop.cpp \
	ewindow.cpp \
	ewindowstyle.cpp \
	ewindowstyleskinned.cpp

guiincludedir = $(pkgincludedir)/lib/gui
guiinclude_HEADERS = \
	ebutton.h \
	ecanvas.h \
	einput.h \
	einputnumber.h \
	einputstring.h \
	elabel.h \
	elistbox.h \
	elistboxcontent.h \
	epixmap.h \
	epositiongauge.h \
	eslider.h \
	esubtitle.h \
	evideo.h \
	ewidget.h \
	ewidgetanimation.h \
	ewidgetdesktop.h \
	ewindow.h \
	ewindowstyle.h \
	ewindowstyleskinned.h
