installdir = $(pkglibdir)/python

SUBDIRS = Components Tools Screens Plugins

install_PYTHON = \
	e2reactor.py \
	GlobalActions.py \
	keyids.py \
	keymapparser.py \
	Navigation.py \
	NavigationInstance.py \
	RecordTimer.py \
	ServiceReference.py \
	skin.py \
	mytest.py \
	timer.py \
	PowerTimer.py \
	upgrade.py
