installdir = $(pkglibdir)/python

SUBDIRS = Components Tools Screens Plugins

install_PYTHON = \
	e2reactor.py \
	BoxBrandingTest.py \
	GlobalActions.py \
	keyids.py \
	keymapparser.py \
	Navigation.py \
	NavigationInstance.py \
	RecordTimer.py \
	ServiceReference.py \
	skin.py \
	StartEnigma.py \
	timer.py \
	upgrade.py \
	Scheduler.py
