SUBDIRS = hdbouquets sdbouquets

installdir = $(pkgdatadir)/defaults/Dream

dist_install_DATA = \
	bouquets.tv \
	dm800se.info \
	dm500hd.info \
	dm7020hd.info \
	dm7025.info \
	dm8000.info \
	dm800.info \
	settings.800se \
	settings.500hd \
	settings.7020hd \
	settings.7025 \
	settings.800 \
	settings.8000 \
	settings.c \
	settings.t
