installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
	blue.png \
	blue_pressed.png \
	button_blue_off.png \
	button_blue.png \
	button_green_off.png \
	button_green.png \
	button_red_off.png \
	button_red.png \
	button_yellow_off.png \
	button_yellow.png \
	green-big.png \
	green.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
	key_blue.png \
	key_green.png \
	key_info.png \
	key_menu.png \
	key_red.png \
	key_yellow.png \
	key_text.png \
	key_left.png \
	key_right.png \
	key_next.png \
	key_prev.png \
	red-big.png \
	red.png \
	yellow.png
