installdir = $(LIBDIR)/enigma2/python/Components

install_DATA = \
	ActionMap.py GUISkin.py PerServiceDisplay.py TimeInput.py components.py \
	Button.py HTMLComponent.py ProgressBar.py TimerList.py config.py        \
	Clock.py HTMLSkin.py ServiceList.py VariableText.py                     \
	ConfigList.py Header.py ServiceName.py VariableValue.py                 \
	EventInfo.py Label.py ServiceScan.py VolumeBar.py                       \
	GUIComponent.py MenuList.py TextInput.py __init__.py MovieList.py
