installdir = $(LIBDIR)/enigma2/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	ActionMap.py GUISkin.py PerServiceDisplay.py components.py              \
	Button.py HTMLComponent.py ProgressBar.py TimerList.py config.py        \
	Clock.py HTMLSkin.py ServiceList.py VariableText.py                     \
	ConfigList.py Header.py ServiceName.py VariableValue.py                 \
	EventInfo.py Label.py ServiceScan.py VolumeBar.py                       \
	GUIComponent.py MenuList.py __init__.py MovieList.py                \
	InputDevice.py ServicePosition.py SetupDevices.py Harddisk.py           \
	AVSwitch.py Network.py RFmod.py DiskInfo.py NimManager.py Lcd.py        \
	EpgList.py ScrollLabel.py Timezones.py Language.py HelpMenuList.py      \
	BlinkingPixmap.py Pixmap.py ConditionalWidget.py Slider.py LanguageList.py  \
	PluginList.py PluginComponent.py RecordingConfig.py About.py UsageConfig.py \
	FIFOList.py ServiceEventTracker.py Input.py TimerSanityCheck.py FileList.py \
	MultiContent.py MediaPlayer.py TunerInfo.py VideoWindow.py ChoiceList.py
