installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	ActionMap.py GUISkin.py PerServiceDisplay.py components.py              \
	Button.py HTMLComponent.py ProgressBar.py TimerList.py config.py        \
	HTMLSkin.py ServiceList.py VariableText.py                              \
	ConfigList.py VariableValue.py                                          \
	Label.py ServiceScan.py VolumeBar.py VolumeControl.py                   \
	GUIComponent.py MenuList.py __init__.py MovieList.py                    \
	InputDevice.py ServicePosition.py SetupDevices.py Harddisk.py           \
	AVSwitch.py Network.py RFmod.py DiskInfo.py NimManager.py Lcd.py        \
	EpgList.py ScrollLabel.py Timezones.py Language.py HelpMenuList.py      \
	BlinkingPixmap.py Pixmap.py ConditionalWidget.py Slider.py              \
	PluginList.py PluginComponent.py RecordingConfig.py About.py UsageConfig.py \
	FIFOList.py ServiceEventTracker.py Input.py TimerSanityCheck.py FileList.py \
	MultiContent.py MediaPlayer.py TunerInfo.py VideoWindow.py ChoiceList.py \
	Element.py Playlist.py ParentalControl.py ParentalControlList.py \
	Ipkg.py SelectionList.py Scanner.py SystemInfo.py DreamInfoHandler.py \
	Task.py language_cache.py Console.py ResourceManager.py TuneTest.py \
	Keyboard.py Sensors.py FanControl.py
